--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   -->
 
 <!--  <base href="/">-->
-  <base href="/3boodeev/">
+  <base href="/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="MY Portfolio WebSite">
